# solidity

./: .gitignore  CMakeLists.txt  Changelog.md  README.md
.github/workflows/: release.yml
cmake/: EthCompilerSettings.cmake  EthDependencies.cmake  EthOptions.cmake  ProjectBoost.cmake
libdevcore/: CMakeLists.txt  GmHash.cpp
libevmasm/: Assembly.cpp
libsolutil/: CMakeLists.txt  GmHash.cpp
libsolutil/sm3/: sm3.cpp  sm3.h
lllc/: main.cpp
scripts/: install_deps.ps1
solc/: CommandLineInterface.cpp
